Remove unnecessary quotes

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -16,14 +16,14 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   SecretsStackName: { Type: String }
-  VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   SharedMemcachedEndpointAddress: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
-  SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   DeploymentPackageBucketName: { Type: String }
   SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
