--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -16,14 +16,14 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   SecretsStackName: { Type: String }
-  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   EchoServiceToken: { Type: String }
-  SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   CastleHostname: { Type: String }
   IdHostname: { Type: String }
 
