--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -20,16 +20,16 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
-  VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
+  VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
   AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
-  SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   CastleRdsPostgresqlEndpoint: { Type: String }
 
 Conditions:
