--- a/stacks/apps/dovetail-legacy.yml
+++ b/stacks/apps/dovetail-legacy.yml
@@ -17,7 +17,7 @@ Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
