--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -65,16 +65,16 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   EchoServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: String }
-  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   # For legacy stack
   CloudFormationNotificationArn: { Type: String }
   TemplateUrlPrefix: { Type: String }
