--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -9,7 +9,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   SharedEcsClusterName: { Type: String }
-  SharedVpcId: { Type: "AWS::EC2::VPC::Id" }
+  SharedVpcId: { Type: AWS::EC2::VPC::Id }
   SharedVpcCidrBlock: { Type: String }
   SharedEcsAsgName: { Type: String }
   SharedAlbName: { Type: String }
