--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -21,15 +21,15 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   NotificationsStackName: { Type: String }
-  KeyPairName: { Type: "AWS::EC2::KeyPair::KeyName" }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
-  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  KeyPairName: { Type: AWS::EC2::KeyPair::KeyName }
+  VpcId: { Type: AWS::EC2::VPC::Id }
+  VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   EcsClusterName: { Type: String }
-  LoadBalancerSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
-  EcsLaunchEndpointsAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
-  KmsEndpointAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  LoadBalancerSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   DovetailRedisHostname: { Type: String }
 
 Conditions:
