--- a/stacks/shared-resource-share.yml
+++ b/stacks/shared-resource-share.yml
@@ -9,9 +9,9 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   SharedResourceSharePrincipals: { Type: CommaDelimitedList }
-  VPCPrivateSubnet1: { Type: "AWS::EC2::Subnet::Id" }
-  VPCPrivateSubnet2: { Type: "AWS::EC2::Subnet::Id" }
-  VPCPrivateSubnet3: { Type: "AWS::EC2::Subnet::Id" }
+  VPCPrivateSubnet1: { Type: AWS::EC2::Subnet::Id }
+  VPCPrivateSubnet2: { Type: AWS::EC2::Subnet::Id }
+  VPCPrivateSubnet3: { Type: AWS::EC2::Subnet::Id }
 
 # Conditions:
 #   IsProduction: !Equals [!Ref EnvironmentType, Production]
