--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -5,7 +5,7 @@ Description: Creates VPC flow logs for the shared VPC.
 
 Parameters:
   EnvironmentType: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
 
