--- a/stacks/shared-vpc/gateway-endpoints.yml
+++ b/stacks/shared-vpc/gateway-endpoints.yml
@@ -4,7 +4,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Creates various Gateway VPC endpoints in the shared VPC
 
 Parameters:
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   PublicRouteTableId: { Type: String }
   PrivateRouteTableId: { Type: String }
 
