--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -11,10 +11,10 @@ Parameters:
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
-  PublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  PublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  PublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
+  PublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  PublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  PublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
 
 # !!!! IMPORTANT !!!!
 #
