--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -24,16 +24,16 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
   AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
-  VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedRdsPostgresqlEndpoint: { Type: String }
