--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -61,10 +61,10 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  VpcId: { Type: "AWS::EC2::VPC::Id" }
-  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcId: { Type: AWS::EC2::VPC::Id }
+  VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
+  VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   NotificationsStackName: { Type: String }
   EchoServiceToken: { Type: String }
 
