Disable workers outside primary region in new cluster

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -14,6 +14,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
@@ -75,9 +76,10 @@ Resources:
         AlbListenerRulePriorityPrefix: !Ref CmsSharedAlbListenerRulePriorityPrefix
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
