--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -15,6 +15,7 @@ Parameters:
   EcsClusterName: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
@@ -99,6 +100,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         EchoServiceToken: !Ref EchoServiceToken
@@ -197,6 +199,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
@@ -231,6 +234,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         EchoServiceToken: !Ref EchoServiceToken
@@ -353,6 +357,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
