--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -23,6 +23,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   EchoServiceToken: { Type: String }
@@ -41,8 +42,10 @@ Parameters:
 Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   Constants:
@@ -157,7 +160,7 @@ Resources:
 
   WebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasAuroraEndpoint
+    Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
@@ -183,7 +186,7 @@ Resources:
       TaskDefinition: !Ref WebTaskDefinition
   WorkerEcsService:
     Type: AWS::ECS::Service
-    Condition: HasAuroraEndpoint
+    Condition: EnableWorkers # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
