--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -22,6 +22,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
@@ -41,12 +42,14 @@ Parameters:
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoints: !And
     - !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
     - !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
   HasAuroraEndpoints: !And
     - !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
     - !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
+  EnableWorkers: !And [!Condition HasRdsEndpoints, !Condition IsPrimaryRegion]
 
 Resources:
   HostHeaderListenerRule:
@@ -152,7 +155,7 @@ Resources:
 
   WebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoints
+    Condition: HasRdsEndpoints # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
@@ -177,7 +180,7 @@ Resources:
       TaskDefinition: !Ref WebTaskDefinition
   WorkerEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoints
+    Condition: EnableWorkers # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
