--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -65,6 +65,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   EchoServiceToken: { Type: String }
@@ -83,8 +84,10 @@ Parameters:
 Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   Constants:
@@ -473,7 +476,7 @@ Resources:
 
   WebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasAuroraEndpoint
+    Condition: HasAuroraEndpoint # See README
     DependsOn:
       - HttpListener
       - HttpsListener
@@ -565,7 +568,7 @@ Resources:
 
   WorkerEcsService:
     Type: AWS::ECS::Service
-    Condition: HasAuroraEndpoint
+    Condition: EnableWorkers # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
