Add more hostname constants

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -220,6 +220,8 @@ Resources:
       BetaHostname: !If [IsProduction, beta.prx.org, beta.staging.prx.tech]
       CastleHostname: !If [IsProduction, castle.prx.tech, castle.staging.prx.tech]
       CmsHostname: !If [IsProduction, cms.prx.org, cms.staging.prx.tech]
+      CorporateHostname: corporate.prx.tech
+      ExchangeHostname: !If [IsProduction, exchange.prx.org, exchange.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
