--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1112,9 +1112,12 @@ Resources:
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
         CastleHostname: !GetAtt Constants.CastleHostname
+        CorporateHostname: !GetAtt Constants.CorporateHostname
+        ExchangeHostname: !GetAtt Constants.ExchangeHostname
         IdHostname: !GetAtt Constants.IdHostname
 
         # App-specific parameters
@@ -1127,6 +1130,8 @@ Resources:
         MetricsEcrImageTag: !Ref MetricsEcrImageTag
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
         MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
+
+        ProxyLambdaCodeS3ObjectKey: !Ref ProxyPrxOrgCodeS3ObjectKey
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
