Pass Arranger OAI to 100A stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -35,6 +35,8 @@ Parameters:
   CmsSecretsVersion: { Type: String }
   CmsSharedAlbListenerRulePriorityPrefix: { Type: String }
 
+  DovetailCdnArrangerCloudFrontOai: { Type: String }
+
   IdEcrImageTag: { Type: String }
   IdSecretsVersion: { Type: String }
   IdSharedAlbListenerRulePriorityPrefix: { Type: String }
