--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -967,6 +967,8 @@ Resources:
         CmsSecretsVersion: !Ref CmsSecretsVersion
         CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
 
+        DovetailCdnArrangerCloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
+
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
         IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
