Pass Arranger S3 key to 100A stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -35,6 +35,7 @@ Parameters:
   CmsSecretsVersion: { Type: String }
   CmsSharedAlbListenerRulePriorityPrefix: { Type: String }
 
+  DovetailCdnArrangerLambdaCodeS3ObjectKey: { Type: String }
   DovetailCdnArrangerCloudFrontOai: { Type: String }
 
   IdEcrImageTag: { Type: String }
