--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -967,6 +967,7 @@ Resources:
         CmsSecretsVersion: !Ref CmsSecretsVersion
         CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
 
+        DovetailCdnArrangerLambdaCodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
         DovetailCdnArrangerCloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
 
         IdEcrImageTag: !Ref IdEcrImageTag
