Pass DT Router hostname to 100A stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -961,6 +961,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
 
         # App-specific parameters
 
