--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -212,6 +212,19 @@ Resources:
         - !Ref Subnet3
       VpcEndpointType: Interface
       VpcId: !Ref VPC
+  StsVpcEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref AwsServiceInterfaceEndpointsSecurityGroup
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.sts
+      SubnetIds:
+        - !Ref Subnet1
+        - !Ref Subnet2
+        - !Ref Subnet3
+      VpcEndpointType: Interface
+      VpcId: !Ref VPC
 
   # Public subnets
   Subnet1:
