Add STS VPC endpoint placeholder

--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -239,6 +239,22 @@ Resources:
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
 
+  # TODO
+  # StsVpcEndpoint:
+  #   # https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_sts_vpce.html
+  #   Type: AWS::EC2::VPCEndpoint
+  #   Properties:
+  #     PrivateDnsEnabled: true
+  #     SecurityGroupIds:
+  #       - !Ref tktk
+  #     ServiceName: !Sub com.amazonaws.${AWS::Region}.sts
+  #     SubnetIds:
+  #       - !Ref PublicSubnet1Id
+  #       - !Ref PublicSubnet2Id
+  #       - !Ref PublicSubnet3Id
+  #     VpcEndpointType: Interface
+  #     VpcId: !Ref VpcId
+
 Outputs:
   EcsLaunchEndpointsAccessSecurityGroupId:
     Value: !GetAtt EcsLaunchEndpointsAccessSecurityGroup.GroupId
