--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -174,6 +174,8 @@ Resources:
       PreferredMaintenanceWindow: "tue:06:15-tue:06:45"
       PubliclyAccessible: true
       StorageType: !If [UseProvisionedStorage, "io1", "gp2"]
+      EnableCloudwatchLogsExports:
+        - "postgres"
       Tags:
         - Key: Project
           Value: !Ref ProjectName
