Pass origin request key to 100A stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -972,6 +972,8 @@ Resources:
         DovetailCdnArrangerLambdaCodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
         DovetailCdnArrangerCloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
 
+        DovetailCdnOriginRequestLambdaCodeS3ObjectKey: !Ref DovetailCdnOriginRequestCodeS3ObjectKey
+
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
         IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
