Move origin request parameter to 200A

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -63,6 +63,8 @@ Parameters:
   CastleSharedAlbListenerRulePriorityPrefix: { Type: String }
   CastleRdsPostgresqlEndpoint: { Type: String }
 
+  DovetailCdnOriginRequestLambdaCodeS3ObjectKey: { Type: String }
+
   ExchangeEcrImageTag: { Type: String }
   ExchangeSecretsVersion: { Type: String }
   ExchangeSharedAlbListenerRulePriorityPrefix: { Type: String }
