Add CDN Arranger outputs

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -324,3 +324,8 @@ Outputs:
 
   CmsElasticsearchDomainName:
     Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
+
+  DovetailCdnArrangerFunctionArn:
+    Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerFunctionArn
+  DovetailCdnArrangerWorkspaceBucketArn:
+    Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerWorkspaceBucketArn
