--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -165,3 +165,9 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: notBreaching
+
+Outputs:
+  ArrangerFunctionArn:
+    Value: !GetAtt ArrangerFunction.Arn
+  ArrangerWorkspaceBucketArn:
+    Value: !GetAtt DtCdnArrangerWorkspaceBucket.Arn
