Pass CDN Arranger outputs to 200A stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -39,6 +39,8 @@ Parameters:
   S3SigningUserName: { Type: String }
   S3SigningEndpointUrl: { Type: String }
   S3SigningAccessKeyId: { Type: String }
+  DovetailCdnArrangerFunctionArn: { Type: String }
+  DovetailCdnArrangerWorkspaceBucketArn: { Type: String }
   DeploymentPackageBucketName: { Type: String }
   S3StaticSiteDeployServiceToken: { Type: String }
   CastleHostname: { Type: String }
