--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1041,6 +1041,8 @@ Resources:
         S3SigningUserName: !GetAtt Apps100AStack.Outputs.S3SigningUserName
         S3SigningEndpointUrl: !GetAtt Apps100AStack.Outputs.S3SigningEndpointUrl
         S3SigningAccessKeyId: !GetAtt Apps100AStack.Outputs.S3SigningAccessKeyId
+        DovetailCdnArrangerFunctionArn: !GetAtt Apps100AStack.Outputs.DovetailCdnArrangerFunctionArn
+        DovetailCdnArrangerWorkspaceBucketArn: !GetAtt Apps100AStack.Outputs.DovetailCdnArrangerWorkspaceBucketArn
         S3StaticSiteDeployServiceToken: !GetAtt CustomResourcesStack.Outputs.S3StaticSiteDeployServiceToken
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         CastleHostname: !GetAtt Constants.CastleHostname
