Add deprecation comment

--- a/stacks/serverless/dovetail-bytes-lambda.yml
+++ b/stacks/serverless/dovetail-bytes-lambda.yml
@@ -1,4 +1,11 @@
 # stacks/serverless/dovetail-bytes-lambda.yml
+#
+#
+# This stack will be obsolete once the switch to real-time CloudFront logs is complete
+#
+#
+#
+
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Dovetail bytes lambda function
 Parameters:
