Pass Counts S3 key to 100A stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -39,6 +39,8 @@ Parameters:
   DovetailCdnArrangerLambdaCodeS3ObjectKey: { Type: String }
   DovetailCdnArrangerCloudFrontOai: { Type: String }
 
+  DovetailCountsLambdaCodeS3ObjectKey: { Type: String }
+
   IdEcrImageTag: { Type: String }
   IdSecretsVersion: { Type: String }
   IdSharedAlbListenerRulePriorityPrefix: { Type: String }
