Pass DT Redis hostname to 100A stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -962,6 +962,7 @@ Resources:
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
+        DovetailRedisHostname: !Ref DovetailRedisHostname
 
         # App-specific parameters
 
