--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -31,6 +31,7 @@ Parameters:
   SharedRdsPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   DovetailRouterHostname: { Type: String }
+  DovetailRedisHostname: { Type: String }
 
   CmsEcrImageTag: { Type: String }
   CmsSecretsVersion: { Type: String }
