Fix Lambda description

--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -83,7 +83,9 @@ Resources:
       CodeUri:
         Bucket: !Ref CodeS3Bucket
         Key: !Ref CodeS3ObjectKey
-      Description: !Sub ${EnvironmentType} tktktk # TODO
+      Description: !Sub >-
+        ${EnvironmentType} Dovetail CDN Arranger for transcoding and stitching
+        audio files
       Environment:
         Variables:
           ARRANGEMENTS_DDB_ACCESS_ROLE: !Ref ArrangementsDynamodbAccessRoleArn
